test/typecheck/fail/vector_lit_length.sail
default Order dec

function test() -> unit = {
  let v : vector(1, int) = [1, 2];
  ()
}
